Fix truncation of too long notification. Now it wraps

--- a/clive/ui/widgets/notification.scss
+++ b/clive/ui/widgets/notification.scss
@@ -1,7 +1,7 @@
 Notification {
   dock: bottom;
   layer: notification;
-  width: auto;
+  width: 100%;
   margin: 2 4;
   padding: 1 2;
   background: $background;
